<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main_RCYLV_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:nestedScrollingEnabled="true"
        android:orientation="horizontal" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_main_LAY_bottom"
        android:layout_below="@+id/activity_main_RCYLV_top"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="#F4F4F4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_main_TXT_description_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/activity_main_TXT_description_hint"
                android:textColor="#626262"
                android:textSize="@dimen/_13sdp" />

            <EditText
                android:id="@+id/activity_main_ET_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bg_edittext_round_corner"
                android:gravity="start|left"
                android:hint="@string/activity_main_ET_description"
                android:padding="10dp"
                android:textColor="#626262"
                android:textColorHint="#666666"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/activity_main_TXT_time_material"
                android:textColor="#666666"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/white"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/activity_main_RCYLV_material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:nestedScrollingEnabled="true" />

                <TextView
                    android:id="@+id/activity_main_TXT_addmaterial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="@string/activity_main_TXT_addmaterial"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/activity_main_TXT_suborder_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/activity_main_TXT_subtotal"
                    android:text="@string/activity_main_TXT_suborder_hint"
                    android:textColor="#666666"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/activity_main_TXT_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="$00.00"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14sdp" />
            </RelativeLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/activity_main_LAY_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#D8D8D8" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/activity_main_TXT_totalorder_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:text="@string/activity_main_TXT_totalorder_hint"
                android:textColor="#666666"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/activity_main_TXT_finaltotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="$00.00"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14sdp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/activity_main_LAY_addjob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/activity_main_BTN_addjob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_outline"
                    android:padding="6dp"
                    android:text="@string/activity_main_BTN_addjob"
                    android:textAllCaps="false"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_main_LAY_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/activity_main_BTN_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/bg_round_corner_app_color"
                    android:padding="6dp"
                    android:text="@string/activity_main_BTN_submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>